--- a/src/components/VideoItem.css
+++ b/src/components/VideoItem.css
@@ -3,7 +3,7 @@ body {
 }
 
 .search-bar {
-  margin-top: 10px !important;
+  margin-top: 20px !important;
 }
 
 .video-item {
@@ -14,5 +14,24 @@ body {
 
 .video-item.item img {
   max-width: 180px;
+}
+
+@media screen and (max-width: 1024px) {
+  .search-bar, .row {
+    max-width: 950px;
+    margin: auto;
+  }
+  .ui.grid >.row { max-width: 950px; }
+  .ui.column.grid>[class*="eleven wide"].column, .ui.grid>.column.row>[class*="eleven wide"].column, .ui.grid>.row>[class*="eleven wide"].column, .ui.grid>[class*="eleven wide"].column {
+    width: 100% !important;
+    margin-bottom: 1rem;
+  }
+  .ui.column.grid>[class*="five wide"].column, .ui.grid>.column.row>[class*="five wide"].column, .ui.grid>.row>[class*="five wide"].column, .ui.grid>[class*="five wide"].column {
+    width: 100% !important;
+  }
+  .row {
+    display: flex !important;
+    flex-direction: column !important;
+  }
 }
 
